# ActiveContext

./: .env.example  .gitattributes  .gitignore  .opencode.json  ACE-TODO.md  CLAUDE.md  CONTEXT_GUIDE.md  LICENSE  README.md  pyproject.toml  test_conversation_protocol.py  test_shell_slash_command.py
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: test-coverage-session-2026-01-18.md
docs/: acp-protocol.md
docs/callgraph/: calls.md  defines.md  summary.md
docs/diagrams/: 02-message-flow.puml  03-initialization.puml  05-prompt-turn.puml  07-terminal.puml  08-filesystem.puml  09-session-modes.puml  13-message-types.puml  README.md  render.py
docs/diagrams/acp/: 01-architecture.puml  04-session-lifecycle.puml  06-permissions.puml  10-tool-call-states.puml  11-content-blocks.puml  12-plan-updates.puml  14-implementation-notes.puml  README.md
docs/diagrams/activecontext/: 01-projection-engine.puml  02-context-graph.puml  03-node-states.puml  04-ownership-structure.puml  README.md
project/: plan.yaml
scripts/: callgraph.py
src/acp_debug/: __init__.py  __main__.py  cli.py  config.py
src/acp_debug/extension/: __init__.py  base.py  chain.py  loader.py  mock_agent.py  mock_client.py
src/acp_debug/interactive/: __init__.py  commands.py  repl.py
src/acp_debug/modes/: __init__.py  mock_agent.py  mock_client.py  proxy.py  tap.py
src/acp_debug/recording/: __init__.py  player.py  recorder.py
src/acp_debug/state/: __init__.py  session.py
src/acp_debug/transport/: __init__.py  proxy.py  router.py  stdio.py
src/activecontext/: __init__.py  __main__.py  clean.py  logging.py
tests/: conftest.py  test_acp_debug.py  test_acp_debug_integration.py  test_acp_transport.py  test_agent_handle_manager.py  test_agent_registry.py  test_blocking_conversation.py  test_choice_view.py  test_clean.py  test_config.py  test_context_graph.py  test_context_nodes.py  test_context_stack.py  test_context_view.py  test_core_features.py  test_dag_operations.py  test_dashboard_data.py  test_dashboard_routes.py  test_dashboard_server.py  test_dashboard_views.py  test_dashboard_websocket.py  test_direct_transport.py  test_infrastructure.py  test_integration.py  test_llm_providers.py  test_lsp_framing.py  test_markdown_node.py  test_markdown_parser.py  test_mcp_client.py  test_mcp_permissions.py  test_mcp_tool_nodes.py  test_mcp_transport.py  test_message_node.py  test_node_lookup.py  test_node_registry.py  test_notifications.py  test_path_resolution.py  test_permissions.py  test_progression_views.py  test_projection_engine.py  (+11 more)
tests/acp_protocol/: __init__.py  conftest.py  helpers.py  test_errors.py  test_initialize.py  test_jsonrpc.py  test_session.py
tests/fixtures/: example.md  example_golden.md  example_node_golden.md  init_and_session.jsonl
(+109 files in other folders)
