[project]
name = "activecontext"
version = "0.1.0"
description = "Agent loop architecture with executable context as a Python statement timeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Acy James Stapp dba Oort Heavy Industries" }
]
dependencies = [
    "agent-client-protocol>=0.1",
    "filelock>=3.13",
    "httpx>=0.27.0",
    "litellm>=1.40",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "prompt-toolkit>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tiktoken>=0.5.0",
    "aiohttp>=3.9.0,<3.13.0",  # Pin to avoid 3.13.x circular import issues
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
activecontext = "activecontext.__main__:main"
clean = "activecontext.clean:main"
acp-debug = "acp_debug.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/activecontext", "src/acp_debug"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
]
